fix screen size bug, add scrollbar to forecasts

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,4 +29,16 @@
 		scroll-behavior: smooth;
 		scrollbar-color: var(--color-accent) gray;
 	}
+	.custom-scrollbar-no-bg {
+		scrollbar-width: thin;
+		scroll-behavior: smooth;
+		scrollbar-color: var(--color-accent) rgba(255, 255, 255, 0);
+	}
+
+	.stroke-black {
+		-webkit-text-stroke: 2px hsla(0, 0%, 0%, 0.3);
+	}
+	.stroke-white {
+		-webkit-text-stroke: 1px white;
+	}
 }
